2009-07-02  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-net-coding-system): make it customizable.
	(slime-inspector-operate-on-click): Make --more-- button in
	the inspector clickable.

2009-06-30  Geo Carncross  <geocar@gmail.com>

	* swank-ecl.lisp: Package profiling support

2009-06-30  Stas Boukarev  <stassats@gmail.com>

	* swank-openmcl.lisp (arglist): Return :not-available if the arglist
	cannot be obtained. Patch by Terje Norderhaug.

2009-06-29  Stas Boukarev  <stassats@gmail.com>

	* swank.lisp (open-streams): do not create unnecessary output stream
	when using dedicated output stream. Thanks to Terje Norderhaug.

2009-06-28  Terje Norderhaug <terje@in-progress.com>

	Generalize list-threads for implementation-dependent attributes.

	* swank-backend.lisp (thread-attributes): New function.
	* swank-openmcl (thread-attributes): Implement it.
	* swank.lisp (list-threads): Return a table with the attribute
	names as the first row and the new attributes in the last columns.
	* slime.el (slime-update-threads-buffer): For now, ignore the
	extra attributes.

2009-06-28  Stelian Ionescu <stelian.ionescu-zeus@poste.it>

	* slime.el (slime-compiler-macroexpand-inplace)
	(slime-compiler-macroexpand-1-inplace): New commands.
	(slime-macroexpansion-minor-mode-map): Bind them.

2009-06-28  Helmut Eller  <heller@common-lisp.net>

	* swank-sbcl.lisp (add-fd-handler): Avoid recursive invocation
	of the handler, e.g. when read-sequence blocks.

2009-06-28  Stas Boukarev  <stassats@gmail.com>

	* swank-openmcl.lisp (compiler-warning-short-message): In new
	versions of CCL `compiler-warning-nrefs' slot
	of the `compiler-warning' class is now a list, not an integer.

2009-06-25  Geo Carncross  <geocar@gmail.com>

	* swank-ecl.lisp: Profiling support by Marko Kocić

2009-06-27  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-beginning-of-symbol): Skip over #., #-, and #+.
	([test] symbol-at-point.15 .. 17): Test it.
