@@ -1,3 +1,8 @@
+2009-07-02  Helmut Eller  <heller@common-lisp.net>
+
+	* swank.lisp (operator-arglist): Don't use pprint-fill
+	for people with wide screens.
+
 2009-07-02  Stas Boukarev  <stassats@gmail.com>
 
 	* slime.el (slime-net-coding-system): make it customizable.
